# molecule-vagrant

./: .gitignore  .pre-commit-config.yaml  .travis.yml  .yamllint  LICENSE  README.rst  bindep.txt  molecule  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS
.github/workflows/: release.yml  tox.yml
molecule_vagrant/: __init__.py  driver.py
molecule_vagrant/cookiecutter/scenario/driver/vagrant/{{cookiecutter.molecule_directory}}/{{cookiecutter.scenario_name}}/: create.yml  destroy.yml
molecule_vagrant/modules/: vagrant.py
molecule_vagrant/playbooks/: create.yml  destroy.yml  prepare.yml
molecule_vagrant/test/: test_driver.py
molecule_vagrant/test/functional/: conftest.py  test_azure.py  test_func.py
molecule_vagrant/test/scenarios/molecule/config_options/: molecule.yml  verify.yml
molecule_vagrant/test/scenarios/molecule/default/: molecule.yml
molecule_vagrant/test/scenarios/molecule/default-compat/: converge.yml  create.yml  destroy.yml  molecule.yml
molecule_vagrant/test/scenarios/molecule/hostname/: converge.yml  molecule.yml  verify.yml
molecule_vagrant/test/scenarios/molecule/invalid/: molecule.yml
molecule_vagrant/test/scenarios/molecule/multi-node/: converge.yml  molecule.yml  verify.yml
molecule_vagrant/test/scenarios/molecule/network/: converge.yml  molecule.yml  verify.yml
molecule_vagrant/test/scenarios/molecule/provider_config_options/: molecule.yml  verify.yml
molecule_vagrant/test/scenarios/molecule/provider_config_options2/: converge.yml  molecule.yml
molecule_vagrant/test/scenarios/molecule/provider_force/: molecule.yml
molecule_vagrant/test/scenarios/molecule/vagrant_root/: converge.yml  molecule.yml  verify.yml
playbooks/: test-setup.yaml
tools/: Vagrantfile  create_testbox.sh  test-setup.sh
tools/tox-py38/: pre.yml
tools/tox-py39/: pre.yml
zuul.d/: layout.yaml
