[metadata]
name = molecule-vagrant
url = https://github.com/ansible-community/molecule-vagrant
project_urls =
    Bug Tracker = https://github.com/ansible-community/molecule-vagrant/issues
    Release Management = https://github.com/ansible-community/molecule-vagrant/releases
    CI: Zuul = https://dashboard.zuul.ansible.com/t/ansible/builds?project=ansible-community/molecule-vagrant
    Source Code = https://github.com/ansible-community/molecule-vagrant
description = Vagrant Molecule Plugin :: run molecule tests using Vagrant
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Sorin Sbarnea
author_email = sorin.sbarnea@gmail.com
maintainer = Sorin Sbarnea
maintainer_email = sorin.sbarnea@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable

    Environment :: Console

    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators

    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent

    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

    Topic :: System :: Systems Administration
    Topic :: Utilities

keywords =
    ansible
    roles
    testing
    molecule
    plugin
    vagrant

[options]
use_scm_version = True
python_requires = >=3.6
packages = find:
include_package_data = True
zip_safe = False

# These are required in actual runtime:
install_requires =
    molecule >= 3.4.1
    pyyaml >= 5.1, < 6
    Jinja2 >= 2.11.3
    selinux
    python-vagrant

[options.extras_require]
test =
    molecule[test]

[options.entry_points]
molecule.driver =
    vagrant = molecule_vagrant.driver:Vagrant

[options.packages.find]
where = .
